--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,7 +45,9 @@ a {
   background-color: #090909;
 }
 
-.hero-title {
+.hero-title,
+.hero-identifier,
+.hero-more-info-box {
   color: #ceb7ff;
   text-shadow: 0 0 15px #ceb7ff, 0 0 50px #ceb7ff;
   -webkit-text-stroke-width: 2px;
@@ -58,6 +60,39 @@ a {
   border: 3px solid #ceb7ff;
   box-shadow: 0px 0px 4px #ceb7ff;
 }
+
+
+.hero-more-info-text {
+  margin: 1rem;
+  padding: 3rem;
+  position: relative;
+  width: 25%;
+}
+
+.hero-more-info-text::before,
+.hero-more-info-text::after {
+  content: '';
+  position: absolute;
+  width: 54px;
+  height: 54px;
+  border: 0px solid transparent;
+
+}
+
+.hero-more-info-text::before {
+  top: -4px;
+  left: -4px;
+  border-top: 4px solid #ceb7ff;
+  border-left: 4px solid #ceb7ff;
+}
+
+.hero-more-info-text::after {
+  bottom: -4px;
+  right: -4px;
+  border-bottom: 4px solid #ceb7ff;
+  border-right: 4px solid #ceb7ff;
+}
+
 
 .hero-small-title {
   color: #ceb7ff;
